...
      showNotificationBadge={true}
    >
      <Section>
        <SectionHeader
          title="Como você está hoje?"
          subtitle="Sua jornada começa agora"
          testID="text-welcome-quick-register"
        ></SectionHeader>

        <Card style={{ minHeight: 200 }} testID="card-quick-register">
          <Col gap={16}>
            <Between style={styles.quickRegisterHeader}>
              <Text style={styles.quickRegisterTitle}>
...
            />

            <Button
              title="Salvar Humor"
              onPress={initQuickRegister}
              style={styles.quickRegisterButton}
              testID="button-save-mood"
            />
          </Col>
        </Card>
      </Section>

      {/* TODO: Check whether we gonna have to generate these on demand */}
...
