...
        name="settings"
        options={{
          title: "Ajustes",
          tabBarIcon: ({ color }) => (
            <IconSymbol size={28} name="settings.fill" color={color} />
          ),
          tabBarButton: (props) => <HapticTab {...props} testID="tab-settings" />,
        }}
      />
    </Tabs>
  );
}

